# web-crawler-2.0

./: .env  .gitignore  README.md  async_crawler.py  client.py  crawl.py  crawl_quality.py  crawl_stats.py  extract_html.py  json_report.py  logger.py  main.py  pyproject.toml  rate_limiter.py  redirect_guard.py  report.json  resilience.py  robots_guard.py  ssrf_guard.py  storage.py  test_crawl.py  test_crawl_quality.py  test_extract_html.py  test_queue_crawler.py  test_rate_limiter.py  test_redirect_guard.py  test_resilience.py  test_robots_guard.py  test_storage.py  url_normalizer.py
