[project]
name = "web-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "asyncpg>=0.31.0",
    "beautifulsoup4==4.13.4",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "requests==2.32.4",
    "structlog>=26.1.0",
    "validators>=0.35.0",
    "w3lib>=2.4.1",
]
